Minor: Initial version of Kivo_Gaming_Hub backend logic and swagger_api
